force-app/main/default/objects/custom_create307__c/custom_create307__c.object-meta.xml
<CustomObject>
    <label>Custom created object307</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects307</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>