force-app/main/default/objects/custom_create307__c/fields/custom_create_307field539__c.field-meta.xml
<CustomField>
    <fullName>custom_create_307field539__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 307field539</label>
    <type>Checkbox</type>
</CustomField>